website/i18n/pt-BR/docusaurus-plugin-content-docs/version-2.x/api/plugins/plugin-content-pages.mdx
---
sidebar_position: 3
slug: /api/plugins/@docusaurus/plugin-content-pages
---

# 📦 plugin-content-pages

import APITable from '@site/src/components/APITable';

O plugin de páginas padrão para o Docusaurus. O modelo clássico é fornecido com este plugin com configurações padrão. This plugin provides [creating pages](guides/creating-pages.mdx) functionality.

## Installation {#installation}

```bash npm2yarn
npm install --save @docusaurus/plugin-content-pages
```

:::tip

If you use the preset `@docusaurus/preset-classic`, you don't need to install this plugin as a dependency.

You can configure this plugin through the [preset options](../../using-plugins.mdx#docusauruspreset-classic).

:::

## Configuration {#configuration}

Campos aceitos:

```mdx-code-block
<APITable>
```

| Nome                         | Type       | Padrão                            | Descrição                                                                                                               |
| ---------------------------- | ---------- | --------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
| `path`                       | `string`   | `'src/pages'`                     | Path to data on filesystem relative to site dir. Components in this directory will be automatically converted to pages. |
| `routeBasePath`              | `string`   | `'/'`                             | URL route for the pages section of your site. **DO NOT** include a trailing slash.                                      |
| `include`                    | `string[]` | `['**/*.{js,jsx,ts,tsx,md,mdx}']` | Os arquivos correspondentes serão incluídos e processados.                                                              |
| `exclude`                    | `string[]` | _See example configuration_       | No route will be created for matching files.                                                                            |
| `mdxPageComponent`           | `string`   | `'@theme/MDXPage'`                | Componente usado em cada página MDX.                                                                                    |
| `remarkPlugins`              | `[]`       | `any[]`                           | Remark plugins passed to MDX.                                                                                           |
| `rehypePlugins`              | `[]`       | `any[]`                           | Rehype plugins passed to MDX.                                                                                           |
| `beforeDefaultRemarkPlugins` | `any[]`    | `[]`                              | Custom Remark plugins passed to MDX before the default Docusaurus Remark plugins.                                       |
| `beforeDefaultRehypePlugins` | `any[]`    | `[]`                              | Custom Rehype plugins passed to MDX before the default Docusaurus Rehype plugins.                                       |

```mdx-code-block
</APITable>
```

### Example configuration {#ex-config}

Você pode configurar este plugin através das opções de predefinição ou opções do plugin.

:::tip

A maioria dos usuários do Docusaurus configura este plugin através das configurações de predefinição.

:::

```js config-tabs
// Preset Options: pages
// Plugin Options: @docusaurus/plugin-content-pages

const config = {
  path: 'src/pages',
  routeBasePath: '',
  include: ['**/*.{js,jsx,ts,tsx,md,mdx}'],
  exclude: [
    '**/_*.{js,jsx,ts,tsx,md,mdx}',
    '**/_*/**',
    '**/*.test.{js,jsx,ts,tsx}',
    '**/__tests__/**',
  ],
  mdxPageComponent: '@theme/MDXPage',
  remarkPlugins: [require('remark-math')],
  rehypePlugins: [],
  beforeDefaultRemarkPlugins: [],
  beforeDefaultRehypePlugins: [],
};
```

## i18n {#i18n}

Read the [i18n introduction](../../i18n/i18n-introduction.mdx) first.

### Translation files location {#translation-files-location}

- **Base path**: `website/i18n/[locale]/docusaurus-plugin-content-pages`
- **Multi-instance path**: `website/i18n/[locale]/docusaurus-plugin-content-pages-[pluginId]`
- **JSON files**: extracted with [`docusaurus write-translations`](../../cli.mdx#docusaurus-write-translations-sitedir)
- **Markdown files**: `website/i18n/[locale]/docusaurus-plugin-content-pages`

### Example file-system structure {#example-file-system-structure}

```bash
website/i18n/[locale]/docusaurus-plugin-content-pages
│
│ # translations for website/src/pages
├── first-markdown-page.md
└── second-markdown-page.md
```
